--- a/changelog/breaking-changes-upgrade/breaking-changes.mdx
+++ b/changelog/breaking-changes-upgrade/breaking-changes.mdx
@@ -1,222 +1,131 @@
 ---
 title: "Breaking Changes"
-description: "Highlights changes that may break existing tests or integrations, such as required compiler version updates, library API shifts, or major dependency changes. Information here helps developers assess the impact and schedule safe upgrades."
+description: "Documents all API or behavioral changes that require user attention during upgrades. Alerts developers to features removed, changed, or now requiring migration effort, ensuring stability and predictability."
 ---
 
 # Breaking Changes
 
-This page highlights **breaking changes** in GoogleTest that may affect your existing tests or integrations. These include updates that require newer compiler versions, shifts in library APIs, or major dependency changes. Understanding these changes ensures you can plan your upgrades safely and minimize disruptions.
+This page alerts developers to all API or behavioral changes in GoogleTest and GoogleMock that require user attention during upgrades. It documents features or behaviors that have been removed, significantly altered, or now require migration effort to maintain test stability and predictability.
 
 ---
 
-## Why Breaking Changes Matter
+## Purpose of This Page
 
-Breaking changes have a direct impact on your development workflow. They can cause tests to fail, compilation errors, or unexpected behavior if not addressed properly. This page serves as a checkpoint for developers to assess the risks and plan migrations accordingly.
+As GoogleTest and GoogleMock evolve, some changes may break backward compatibility with existing test code. This page helps you:
+
+- Quickly identify breaking changes introduced in new releases
+- Understand the impact on your existing test suites
+- Follow migration steps where applicable to update your code
+
+Keeping aligned with this section ensures your tests continue to run smoothly on upgraded versions.
 
 ---
 
-## Key Categories of Breaking Changes
+## What Constitutes a Breaking Change
 
-### 1. Compiler Version Requirements
+A breaking change includes any alteration that could cause your existing test code or mocks to fail to compile or produce incorrect results without modification. Common types of breaking changes include:
 
-- GoogleTest enforces a minimum compiler version, such as requiring **C++17 support or later**.
-- Attempting to compile with unsupported compiler versions will result in errors.
-- Be sure to verify your development environment's compliance before upgrading.
+- Removal or renaming of public APIs (functions, macros, classes, methods)
+- Changes to the signatures or expected behaviors of mocked methods
+- Modifications to default behaviors that affect test outcomes
+- Changes in macro expansions or new mandatory qualifiers
+- Alterations in configuration flags that change test execution or mocking behavior
+
+GoogleTest headlines and documents such changes here with migration advice.
+
+---
+
+## Recent Breaking Changes
+
+### Version 1.17.0 and onward
+
+- **Mandatory C++17 support:** Minimum language standard is now C++17. Tests and mocks must be compiled with C++17 or higher.
+- **Enhanced GoogleMock macros:** The primary `MOCK_METHOD` macro now mandates careful usage of parentheses when mocking methods with templated return or argument types to avoid parsing issues.
+- **Thread safety updates:** Internal synchronization primitives are refined; user code should ensure C++17 compatible threading libraries.
+- **Deprecation of legacy `MOCK_METHODn` macros**: Migration to the generic `MOCK_METHOD` macro is highly recommended to avoid incompatibilities.
+
+Refer to the [Latest Release Details](https://github.com/google/googletest/releases/tag/v1.17.0) for complete change logs.
+
+---
+
+## Migration Guidelines
+
+When upgrading to versions with breaking changes, follow these steps to minimize disruption:
+
+1. **Verify compiler and standard support:** Confirm your build environment uses a compatible C++17 compiler.
+2. **Refactor mocks to use `MOCK_METHOD` macro:** Replace any legacy `MOCK_METHODn` usage with the new syntax as documented.
+3. **Check method declarations containing commas:** For methods returning types with commas (e.g., `std::pair<bool,int>`), ensure you wrap such types in parentheses when using `MOCK_METHOD`.
+
+   ```cpp
+   // WRONG:
+   MOCK_METHOD(std::pair<bool, int>, GetPair, ());  // Will fail to compile
+
+   // CORRECT - wrapping return type in parentheses:
+   MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+   ```
+
+4. **Review test logs after upgrade:** Pay attention to warnings or errors from GoogleMock about matchers, expectations, or deprecated usage.
+5. **Update threading code as necessary:** Ensure your environment supports the threading primitives expected by GoogleTest's internals.
+
+---
+
+## Known Breaking Changes Examples
+
+### Mock Method Macro Changes
+
+The introduction of the generic `MOCK_METHOD` macro replaces the older `MOCK_METHODn` family. Its parameters must be carefully formulated:
+
+- Return types or arguments with commas must be enclosed in extra parentheses.
+- Qualifiers like `const`, `override`, or `noexcept` must be explicitly spelled out.
 
 **Example:**
 
 ```cpp
-// From gtest-port.h
-#if !defined(GTEST_INTERNAL_CPLUSPLUS_LANG) || \
-    GTEST_INTERNAL_CPLUSPLUS_LANG < 201703L
-#error C++ versions less than C++17 are not supported.
-#endif
+class MockFoo {
+ public:
+  MOCK_METHOD((std::pair<bool, int>), GetPair, (), (const, override));
+};
 ```
 
-**Action:** Upgrade your compiler to at least C++17 compatible version before integrating recent GoogleTest releases.
+### Strict Enforcement on `EXPECT_CALL` Clause Ordering
 
-### 2. API Adjustments and Macro Changes
+`EXPECT_CALL` expects modifier clauses like `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` in a defined order. Violations or multiple use of clauses that should appear only once now cause failures.
 
-- Certain macros, APIs, or behaviors have changed which affect backward compatibility.
-- Names, behaviors, or requirements around test fixtures, assertions, and death tests may have evolved.
-- For instance, new rules about test suite and test name restrictions, or about how death tests function internally.
+Ensure that `.With()` is the first clause and that `.WillByDefault()` appears exactly once in `ON_CALL`.
 
-**Important:**
+### Removal or Change in Legacy Features
 
-- Avoid underscores in test suite and test names as these can lead to ambiguous generated class names.
-- Fatal assertions (`ASSERT_*`) inside constructors or destructors are disallowed.
-
-### 3. Dependency and Platform Support
-
-- Some platform or OS-specific changes may require updates.
-- Usage of POSIX threads, clone semantics in Linux, and Windows-specific behavior may be adjusted.
-
-### 4. Death Test Style and Behavior
-
-- The default death test style remains "fast", but "threadsafe" style is strongly recommended in multi-threaded environments.
-- Behavior of death tests now better handles multi-threaded programs and more accurately reports assertion failures and exit statuses.
-
-**Tip:**
-
-- Set death test style explicitly:
-
-```cpp
-GTEST_FLAG_SET(death_test_style, "threadsafe");
-```
-
+Some older macros and helper constructs have been deprecated in favor of cleaner, more consistent APIs. Review any use of deprecated features and migrate accordingly.
 
 ---
 
-## Preparing for Breaking Changes
+## Troubleshooting Tips for Breaking Changes
 
-To ensure a smooth transition:
+- **Compilation errors related to `MOCK_METHOD`:** Double-check parentheses around complex types and ensure qualifiers conform to requirements.
+- **Unexpected mock failures after upgrade:** Examine changes in the default behavior or cardinalities inferred by GoogleMock and specify explicit expectations where necessary.
+- **Threading-related test issues:** Verify platform and build compatibility with C++17 threading support as required by recent GoogleTest versions.
 
-- **Review compiler versions:** Confirm your toolchain meets the minimum requirements.
-- **Check test suite and test names:** Follow guidelines to avoid underscores and reserved patterns.
-- **Adjust death tests:** Ensure death test usage adheres to recommended naming conventions and styles.
-- **Validate mocks and matchers:** If using GoogleMock, check changes in expectations and behaviors.
-- **Read upgrade guides:** Follow the official [Upgrade & Migration Guides](../breaking-changes-upgrade/upgrade-migration-guides).
+If needed, consult the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) and [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) for best practices.
 
 ---
 
-## Common Breakage Scenarios
+## Additional Resources
 
-### Fatal Assertions in Non-void Functions
-
-- Fatal assertions (`ASSERT_*`, `FAIL()`) **must only appear in void-returning functions.**
-- Using them inside constructors or destructors will cause compile errors.
-
-This rule prevents unexpected failures or aborted tests due to improper use of macros.
-
-### Mixing TEST and TEST_F in the Same Test Suite
-
-- All tests within a test suite must share the **same fixture class**.
-- Mixing `TEST()` and `TEST_F()` in one suite causes runtime failures.
-
-### Instantiating Parameterized Tests
-
-- Each parameterized test defined with `TEST_P` must be instantiated using `INSTANTIATE_TEST_SUITE_P`.
-- Failure to instantiate leads to zero tests being run and an error message.
-
-### Stream Operator Overloads
-
-For custom types used in assertions, ensure:
-- `operator<<` is defined for output.
-- Or implement `AbslStringify()` or `PrintTo()` correctly.
-
-Lack of these may produce unintelligible output on assertion failures.
+- [Upgrade Guide](https://google.github.io/googletest/changelog/breaking-changes-upgrade/upgrade-guide)
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [Using GoogleMock Effectively Guide](https://google.github.io/googletest/guides/mocking.html)
+- [Latest Release Notes on GitHub](https://github.com/google/googletest/releases)
 
 ---
 
-## Best Practices to Prevent Breakages
+## Summary
 
-- **Upgrade compilers early** to the supported C++17 standard or higher.
-- **Adhere to naming rules:** Avoid underscores that can confuse internal test class name generation.
-- **Separate death tests:** Use suites ending with `DeathTest` suffix as advised.
-- **Use typed or parameterized tests properly:** Actually instantiate all defined parameterized tests.
-- **Avoid fatal assertions in constructors/destructors:** Use `SetUp()` and `TearDown()` for setup-related assertions.
-
----
-
-## Troubleshooting
-
-### Compilation Errors about C++ Versions
-
-Ensure your compiler supports C++17 or later. Upgrade your build environment accordingly.
-
-### Unexpected Test Failures Due to Fixture Mismatches
-
-Verify your suites do not mix `TEST` and `TEST_F` or tests using different fixtures under the same suite name.
-
-### Death Test Erratic Behavior
-
-Make sure your test executables are invoked with paths containing separators
-(such as `./my_test`), or configure death test style to "threadsafe".
-
-### Parameterized Tests Not Running
-
-Include matching `INSTANTIATE_TEST_SUITE_P` calls for each `TEST_P` to instantiate parameterized tests.
-
----
-
-## Summary of Change Highlights
-
-| Area                       | Change Summary                                                  |
-|----------------------------|----------------------------------------------------------------|
-| Compiler Support           | Requires C++17 or newer compilers.                             |
-| Test Naming Restrictions    | Prohibits underscores in test suite and test names.            |
-| Fixture Consistency         | All tests in a suite must use the same fixture class.          |
-| Death Tests                 | Introduced "threadsafe" style for improved stability.         |
-| Assertion Usage             | Fatal assertions disallowed in non-void functions and ctors.    |
-| Parameterized Test Instantiation | Must instantiate all parameterized tests explicitly.             |
-
----
-
-## Related Documentation
-
-- [Installation Guide](../../getting-started/setup-installation/installation-guide): See prerequisites for compiler requirements.
-- [FAQ on Assertion Failures](../../faq/general-faq/assertions-failures): Understand assertion error reports.
-- [Death Tests Guide](../../guides/performance-and-specialized-use-cases/writing-and-using-death-tests): Best practices for death tests.
-- [Upgrade & Migration Guides](../breaking-changes-upgrade/upgrade-migration-guides): Step-by-step instructions for upgrading.
-
----
-
-## Practical Upgrade Workflow
-
-1. **Backup your code and test data.**
-2. **Upgrade your compiler/toolchain** to support C++17 (or latest recommended version).
-3. **Rename test suites** to avoid underscores and ensure uniqueness.
-4. **Separate death tests** into suites ending with `DeathTest`.
-5. **Check all parameterized tests** have corresponding instantiations.
-6. **Replace fatal assertions in constructors/destructors** with `SetUp()` methods.
-7. **Run all tests** and address failures.
-8. **Use logs and debug output** to pinpoint issues from breaking changes.
-9. **Consult this page and related documentation** if unexpected errors occur.
-
----
+This page is your primary reference for understanding changes in GoogleTest and GoogleMock that could disrupt your existing tests when upgrading. It empowers you to anticipate impacts, plan migrations, and keep your test suite robust and maintainable.
 
 <Tip>
-Upgrading proactively avoids subtle runtime failures or compiler errors. Use `--gtest_filter` and other test filtering flags to gradually validate your test suites during migration.
+Staying current with breaking changes ensures seamless continuous integration and avoids surprises during test runs. Regularly reviewing this page during upgrades saves time and frustration.
 </Tip>
 
----
-
-_For detailed release notes and all changes, visit the [Detailed Release Notes](../release-history/detailed-release-notes) page._
-
-
----
-
-### Example: Naming Restrictions
-
-Consider the following invalid test suite names that must be fixed:
-
-```cpp
-// Avoid leading or trailing underscores.
-TEST(_MySuite, MyTest) { ... }         // Invalid
-TEST(MySuite_, MyTest) { ... }        // Invalid
-
-// Avoid multiple consecutive underscores in combined generated names.
-TEST(Time, Flies_Like_An_Arrow) { ... }
-TEST(Time_Flies, Like_An_Arrow) { ... }
-
-// Correct usage:
-TEST(TimeFlies, LikeAnArrow) { ... }
-```
-
-
-### Example: Death Test Naming
-
-```cpp
-class FooTest : public testing::Test { ... };
-using FooDeathTest = FooTest;
-
-TEST_F(FooTest, RegularTest) {
-  ...
-}
-
-TEST_F(FooDeathTest, DeathTest) {
-  ASSERT_DEATH(SomeFunc(), "pattern");
-}
-```
-
----
+<Warning>
+Always back up your test code and carefully test after upgrading the framework, especially if your mocks use complex signatures or threading.
+</Warning>
